src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-dwP0.25-dhF500.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 320 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 500, bounds: 1280 × 720, states: [Activated]
